# Embedded-Smart-Trash-Bin-Project

./: CMakeLists.txt  wifi.py
src/: Buzzer.c  Buzzer.h  CMakeLists.txt  Flame_Sensor.c  Flame_Sensor.h  FreeRTOSConfig.h  Servo_Motor.c  Servo_Motor.h  ir_sensor.c  ir_sensor.h  main.c  mokh4.c  ultra_sonic_sensor.c  ultra_sonic_sensor.h
